# quadrotor_gazebo_simulator

motor_speed_controller/: CMakeLists.txt  README.md  package.xml
motor_speed_controller/include/motor_speed_controller/: PID_attitude_controller_node.h
motor_speed_controller/launch/: PID_attitude_controller.launch  mav_lowlevel_controller.launch  motor_speed_controller.launch
motor_speed_controller/src/: PID_attitude_controller.cc  PID_attitude_controller_node.cc
rotors_simulator/rotors_description/urdf/: component_snippets.xacro
rotors_simulator/rotors_gazebo/launch/: mav_swarm_rl_navigation.launch  mav_with_joy.launch  spawn_mav.launch  spawn_mav_rl_navigation.launch
rotors_simulator/rotors_gazebo/worlds/: rl_visual_servoing.world
rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt  package.xml
rotors_simulator/rotors_gazebo_plugins/include/rotors_gazebo_plugins/: gazebo_angular_vel_plugin.h  gazebo_random_position_plugin.h  gazebo_wind_gust_plugin.h  gazebo_wind_plugin.h
rotors_simulator/rotors_gazebo_plugins/src/: gazebo_bag_plugin.cpp  gazebo_gps_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_ros_interface_plugin.cpp  gazebo_wind_gust_plugin.cpp  gazebo_wind_plugin.cpp
